smaller title sizes to prevent overlap on mobile

--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ body{
     font-family: Heebo;
     font-style: normal;
     font-weight: normal;
-    font-size: 36px;
-    line-height: 40px;
+    font-size: 32px;
+    line-height: 36px;
 }
 #job{
     font-family: Heebo;
